# dealii-weak_forms

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_8txt.html  CONTRIBUTING.md  README.md  ad__sd__functor__cache_8h.html  ad__sd__functor__cache_8h_source.html  ad__sd__functor__internal_8h.html  ad__sd__functor__internal_8h_source.html  annotated.html  assembler__base_8cc.html  assembler__base_8cc_source.html  assembler__base_8h.html  assembler__base_8h_source.html  assembler__matrix__based_8cc.html  assembler__matrix__based_8cc_source.html  assembler__matrix__based_8h.html  assembler__matrix__based_8h_source.html  bilinear__forms_8h.html  bilinear__forms_8h_source.html  binary__integral__operators_8h.html  binary__integral__operators_8h_source.html  binary__operators_8h.html  binary__operators_8h_source.html  cache__functors_8h.html  cache__functors_8h_source.html  cell__face__subface__operators_8h.html  cell__face__subface__operators_8h_source.html  classWeakForms_1_1AD__SD__Functor__Cache-members.html  classWeakForms_1_1AD__SD__Functor__Cache.html  classWeakForms_1_1AssemblerBase-members.html  classWeakForms_1_1AssemblerBase.html  classWeakForms_1_1BilinearForm-members.html  classWeakForms_1_1BilinearForm.html  classWeakForms_1_1BoundaryIntegral-members.html  classWeakForms_1_1BoundaryIntegral.html  classWeakForms_1_1EnergyFunctor-members.html  classWeakForms_1_1EnergyFunctor.html  classWeakForms_1_1FieldSolution-members.html  (+994 more)
.github/workflows/: ci.yml  doxygen.yml  github_ci_01.yml  github_ci_02.yml  github_ci_03.yml  indentation.yml
benchmarks/: CMakeLists.txt
benchmarks/weak_forms/: step-44-variant_01a.cc  step-44-variant_01d.cc  step-44-variant_01h.cc  step-44-variant_01i.cc  step-44-variant_02-energy_functional_ad_01.cc  step-44-variant_02-energy_functional_sd_02.cc  step-44-variant_02-energy_functional_sd_02a.cc  step-44-variant_02-energy_functional_sd_02a.with_symengine=on.output  step-44-variant_02-energy_functional_sd_03.cc  step-44-variant_02-energy_functional_sd_03a.cc  step-44-variant_02-residual_view_ad_02a.cc  step-44-variant_02-residual_view_ad_02b.cc  step-44-variant_02-residual_view_ad_02b.with_adolc=on.with_adolc_with_tapeless_refcounting=on.output.2  step-44-variant_02-residual_view_sd_02.cc  step-44-variant_02-residual_view_sd_02a.cc  step-44-variant_02-residual_view_sd_03.cc  step-44-variant_02-residual_view_sd_03a.cc  step-44-variant_02-residual_view_sd_03a.with_symengine=on.with_symengine_with_llvm.output
benchmarks/weak_forms/prm/: parameters-step-44.2.prm  parameters-step-44.3.prm  parameters-step-44.4.prm  parameters-step-44.debug.prm  parameters-step-44.prm
cmake/: ClangFormat.cmake  setup_compiler_flags.cmake  setup_external_macros.cmake
cmake/checks/: check_01_cxx_features.cmake  check_02_compiler_features.cmake
cmake/config/: Config.cmake.in  ConfigVersion.cmake.in
doc/doxygen/: CMakeLists.txt  options.dox.in
doc/latex/: .gitignore  formulae.tex
doc/readme/: benchmarks.md  classes.md  concept.md  examples.md
docker/: Dockerfile
docker/dealii-weak_forms/: Dockerfile
docker/dealii-weak_forms-ci/: Dockerfile
examples/example-1/: CMakeLists.txt  example-1.cc
include/weak_forms/: ad_sd_functor_cache.h  ad_sd_functor_internal.h  assembler.h  assembler_base.h  assembler_matrix_based.h  auto_differentiable_forms.h  bilinear_forms.h  binary_integral_operators.h  binary_operators.h  cache_functors.h  cell_face_subface_operators.h  config.h  config.h.in  differentiation.h  energy_functor.h  fe_space_operators.h  functors.h  integrator.h  linear_forms.h  mixed_form_operators.h  mixed_integral_operators.h  mixed_operators.h  numbers.h  operator_evaluators.h  operator_utilities.h  operators.h  residual_functor.h  sd_expression_internal.h  self_linearizing_forms.h  solution_extraction_data.h  solution_storage.h  spaces.h  subspace_extractors.h  subspace_views.h  symbolic_decorations.h  symbolic_forms.h  symbolic_functors.h  symbolic_integral.h  symbolic_operators.h  template_constraints.h  (+7 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+110 more)
source/weak_forms/: CMakeLists.txt  assembler.cc  assembler.inst  assembler.inst.in  assembler.inst1.in  assembler_base.cc  assembler_base.inst  assembler_base.inst.in  assembler_matrix_based.cc  assembler_matrix_based.inst  assembler_matrix_based.inst.in  symbolic_decorations.cc  utilities.cc
tests/: CMakeLists.txt  weak_forms_tests.h
tests/weak_forms/: binary_operators_01.cc  binary_operators_01.output  binary_operators_01_vec.cc  binary_operators_01_vec.output  binary_operators_02.cc  binary_operators_02_vec.cc  binary_operators_03.cc  binary_operators_03_vec.cc  binary_operators_03_vec.output  binary_operators_04a.cc  binary_operators_04a_vec.cc  binary_operators_04b.cc  binary_operators_04b_vec.cc  binary_operators_04b_vec.output  binary_operators_05a.cc  binary_operators_05b.cc  binary_operators_05c.cc  binary_operators_05d.cc  binary_operators_06.cc  binary_operators_06.output  binary_operators_07.cc  binary_operators_07_vec.cc  binary_operators_08.cc  binary_operators_08a.cc  energy_functor_01a.cc  energy_functor_01a.with_trilinos_with_sacado=on.output  energy_functor_01b.cc  energy_functor_01b.with_trilinos_with_sacado=on.output  energy_functor_01c.cc  energy_functor_01c.with_trilinos_with_sacado=on.output  energy_functor_01d.cc  energy_functor_01d.with_trilinos_with_sacado=on.output  energy_functor_02a.cc  energy_functor_02a.with_symengine=on.output  energy_functor_02b.cc  energy_functor_02b.with_symengine=on.output  energy_functor_02c.cc  energy_functor_02c.with_symengine=on.output  energy_functor_02d.cc  energy_functor_02d.with_symengine=on.output  (+421 more)
(+23 files in other folders)
